# JobSearchTools

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  Dockerfile  LICENSE  PERSISTENT_SCHEDULER.md  README.md  docker-compose.windows.yml  docker-compose.yml  docker-entrypoint.sh  mastercard.html  mastercard.json  new.jsonl  old.jsonl  pyproject.toml  start.ps1  visa.html
.github/: copilot-instructions.md
src/: __init__.py  check_updates.py  config.py  old.jsonl  scheduler.py  scrapy_check_updates.py
src/job_boards/: mastercard.py  visa.py
src/job_boards_search/: data.jsonl  new.jsonl  old.jsonl  scrapy.cfg
src/job_boards_search/job_boards_search/: items.py  middlewares.py  pipelines.py  settings.py
src/job_boards_search/job_boards_search/spiders/: __planned_spiders.md  avianca.py  bancolombia.py  bbva.py  citi.py  ecopetrol.py  mastercard.py  nequi.py  planned_spiders.md  scotiabank.py  sura.py  visa.py
src/jobsearchtools/: main.py  scheduler.py
src/jobsearchtools/config/: config.py  settings.py
src/jobsearchtools/job_scraper/: job_scraper.py
src/jobsearchtools/job_scraper/job_scraper/: extensions.py  items.py  middlewares.py  pipelines.py  settings.py
src/jobsearchtools/job_scraper/job_scraper/migrations/: 001_create_scheduler_state.sql
src/jobsearchtools/job_scraper/job_scraper/spiders/dynamic/: bbva.py  visa.py
src/jobsearchtools/job_scraper/job_scraper/spiders/static/: avianca.py  bancolombia.py  citi.py  ecopetrol.py  mastercard.py  nequi.py  scotiabank.py  sura.py
src/jobsearchtools/notifications/: __init__.py  email_notifier.py
tests/: test_config.py  test_items.py  test_notifications.py  test_scheduler.py  test_scheduler_persistence.py  test_settings.py
tests/config/: test_config.py  test_settings.py
tests/jobsearchtools/job_scraper/job_scraper/: test_items.py  test_settings.py
tests/jobsearchtools/job_scraper/job_scraper/spiders/: README.md  __init__.py  conftest.py  test_common.py
tests/jobsearchtools/job_scraper/job_scraper/spiders/dynamic/: __init__.py  test_bbva.py  test_visa.py
tests/jobsearchtools/job_scraper/job_scraper/spiders/static/: __init__.py  test_citi.py  test_ecopetrol.py  test_scotiabank.py  test_static_spiders.py  test_sura.py
tests/notifications/: __init__.py  test_email_notifier.py
tests/spiders/: test_all_spiders.py  test_dynamic_spiders.py  test_static_spiders.py
