[project]
name = "jobsearchtools"
version = "0.1.0"
description = "Set of tools I used on my own job search"
authors = [
    {name = "CDMonsalveA",email = "cdmonsalvea1@gmail.com"}
]
license = {text = "MIT Licence"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "selenium (>=4.31.0,<5.0.0)",
    "httpx[http2] (>=0.28.1,<0.29.0)",
    "parsel (>=1.10.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
